<resources>
    <string name="title_activity_lista_de_empresas">Lista De Empresas</string>
    <string name="app_name">Sensores</string>
    <string-array name="unidades_agua">
        <item>/litro</item>
    </string-array>
    <string-array name="unidades_elec">
        <item>/kilowatt-hora</item>
    </string-array>
    <string-array name="unidades_gas">
        <item>/psi</item>
    </string-array>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="sign_out">Cerrar Sesión</string>

    <string name="google_status_fmt">Usuario Google: %s</string>
    <string name="firebase_status_fmt">Usuario Firebase: %s</string>
    <string name="signed_out">Sesión cerrada</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvido_contrasena">Olvidó su Contraseña?</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="logo_de_la_empresa">Logo de la empresa</string>
    <string name="iniciar_sesion_codigo">Iniciar sesión con código de la empresa</string>
    <string name="codigo">Código</string>
    <string name="iniciar_sesion_google">Iniciar sesión con Google</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="iniciar_sesion_correo">Iniciar sesión con correo electrónico</string>
    <string name="empresa">Nombre de la empresa</string>
    <string name="enviar_correo">Enviar correo electrónico</string>
</resources>
