<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/iniciar_sesion_layout"
    android:fitsSystemWindows="true"
    android:background="@drawable/inicio_background"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo_de_la_empresa"
            android:src="@mipmap/logo_round" />

        <EditText
            android:id="@+id/nombre_usuario_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:ems="10"
            android:inputType="textEmailAddress|textPersonName"
            android:hint="@string/nombre_usuario"
            android:background="@drawable/edit_text_background"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_user"
            android:drawableLeft="@drawable/ic_user"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/contrasena_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/contrasena"
            android:background="@drawable/edit_text_background"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/olvido_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/olvido_contrasena"
            android:onClick="forgotPassword"
            android:clickable="true"
            android:textColor="@color/link"
            android:layout_gravity="end"
            android:focusable="true" />

        <Button
            android:id="@+id/iniciar_sesion_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/boton_inicio"
            android:shadowColor="@color/colorAccent"
            />

        <com.shobhitpuri.custombuttons.GoogleSignInButton
            android:id="@+id/iniciar_sesion_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/iniciar_sesion_google"
            />

    </LinearLayout>
</ScrollView>